<resources>
    <string name="app_name">DuChocolateProdutos</string>
    <string name="action_settings">Settings</string>
    <string name="R_layout">hint</string>
    <string name="muno_principal">Muno Principal</string>
    <string name="vendas">Vendas</string>
    <string name="produtos">Produtos</string>
    <string name="gastos">Gastos</string>
    <string name="todo1">TODO</string>
    <string name="inserir">Inserir</string>
    <string name="alterar">Alterar</string>
    <string name="eleminar">Eleminar</string>
    <string name="todo">TODO</string>
    <string name="menu_das_vendas">Menu das Vendas</string>
</resources>
