<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main">

    <RelativeLayout
        android:id="@+id/id_RL"
        android:layout_width="match_parent"
        android:layout_height="199dp"
        android:background="@drawable/gradientbackground">

        <TextView
            android:id="@+id/textView1"
            android:layout_width="118dp"
            android:layout_height="43dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="157dp"
            android:layout_marginLeft="157dp"
            android:layout_marginTop="139dp"
            android:layout_marginEnd="136dp"
            android:layout_marginRight="136dp"
            android:layout_marginBottom="17dp"
            android:text="@string/muno_principal"
            android:textColor="#fff" />

        <ImageView
            android:id="@+id/id_imagem"
            android:layout_width="146dp"
            android:layout_height="112dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="133dp"
            android:layout_marginLeft="133dp"
            android:layout_marginTop="19dp"
            android:layout_marginEnd="133dp"
            android:layout_marginRight="133dp"
            android:layout_marginBottom="68dp"
            android:contentDescription="@string/todo"
            app:srcCompat="@drawable/ic_launcher_foreground"
            tools:ignore="VectorDrawableCompat" />
    </RelativeLayout>

    <Button
        android:id="@+id/bt_vendas"
        android:text="@string/vendas"
        android:layout_width="291dp"
        android:layout_height="48dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="49dp"
        android:background="@drawable/buttonstyleith"
        android:textColor="#fff"

        />

    <Button
        android:id="@+id/bt_produtos"
        android:text="@string/produtos"
        android:layout_width="291dp"
        android:layout_height="48dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="40dp"
        android:background="@drawable/buttonstyleith"
        android:textColor="#fff"
        />

    <Button
        android:id="@+id/bt_gastos"
        android:text="@string/gastos"
        android:layout_width="291dp"
        android:layout_height="48dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="74dp"
        android:background="@drawable/buttonstyleith"
        android:textColor="#fff"
        />


</LinearLayout>